--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Mwtether Society</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Primary SEO -->
+  <title>MWtether Society – Global News, Scandals & Entertainment</title>
+  <meta name="description" content="Latest global news, celebrity scandals, real stories and entertainment updates. Fresh content daily.">
+  <link rel="canonical" href="https://mwtether.online/">
+  
+  <!-- Sitemap (Google auto-discovers this) -->
+  <link rel="sitemap" type="application/xml" href="https://mwtether.online/sitemap.xml">
+
+  <!-- Open Graph (Facebook, WhatsApp, Discord, iMessage, etc.) -->
+  <meta property="og:url" content="https://mwtether.online/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="MWtether Society – Global News, Scandals & Entertainment">
+  <meta property="og:description" content="Latest global news, celebrity scandals, real stories and entertainment updates. Fresh content daily.">
+  <meta property="og:image" content="https://mwtether.online/og-image.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="MWtether Society">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="MWtether Society – Global News, Scandals & Entertainment">
+  <meta name="twitter:description" content="Latest global news, celebrity scandals, real stories and entertainment updates.">
+  <meta name="twitter:image" content="https://mwtether.online/og-image.jpg">
+  <meta name="twitter:site" content="@mwtethersociety"> <!-- change if you have a handle -->
+
+  <!-- Extra SEO & Browser -->
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#d91e3a">
+  <meta name="author" content="MWtether Society">
+  <meta name="language" content="en">
+
+  <!-- Favicon (add these files later if you want) -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  
 <style>
   :root{--bg:#fafafa;--text:#1a1a1a;--muted:#666;--accent:#d91
   ;--border:#e0e0e0;}
