--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Open Graph (Facebook, WhatsApp, Discord, iMessage, etc.) -->
   <meta property="og:url" content="https://mwtether.online/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="MWtether Society – Forex and forex, Scandals & Education">
+  <meta property="og:title" content="MWtether Society – Forex and news, Scandals & Education">
   <meta property="og:description" content="Latest global economic news, celebrity scandals, real stories and education updates.">
   <meta property="og:image" content="https://mwtether.online/og-image.jpg">
   <meta property="og:image:width" content="1200">
@@ -239,7 +239,7 @@
 
       let categoryDisplay = 'UPDATE';
       if (type === 'news') categoryDisplay = 'NEWS';
-      else if (type === 'stories') categoryDisplay = 'FX SIGNALS';
+      else if (type === 'stories') categoryDisplay = 'FOREX';
       else if (type === 'entertainment') categoryDisplay = 'EDUCATION';
       else if (type === 'scandals') categoryDisplay = 'SCANDALS';
 
