--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <nav class="topnav">
   <button data-tab="all" class="tabBtn active">All</button>
   <button data-tab="news" class="tabBtn">News</button>
-  <button data-tab="stories" class="tabBtn">FX signals</button>
+  <button data-tab="stories" class="tabBtn">Forex</button>
   <button data-tab="entertainment" class="tabBtn">Education </button>
   <button data-tab="scandals" class="tabBtn">Scandals</button>
   <a href="#">About</a>
@@ -120,6 +120,69 @@
 
 <div class="footer-fixed">
   © 2025 Society. All rights reserved.
+  <div>
+    <!-- ---------- CSS FOR RESPONSIVE ADS ---------- -->
+<style>
+    .ad-box { display: none; text-align: center; margin: 10px 0; }
+
+    /* Small screens (phones) 320x50 */
+    @media (max-width: 480px) {
+        #ad-320x50 { display: block; }
+    }
+
+    /* Medium screens (tablets) 468x60 */
+    @media (min-width: 481px) and (max-width: 900px) {
+        #ad-468x60 { display: block; }
+    }
+
+    /* Large screens (desktop) 728x90 */
+    @media (min-width: 901px) {
+        #ad-728x90 { display: block; }
+    }
+</style>
+
+<!-- ---------- AD: 320x50 (Phones) ---------- -->
+<div id="ad-320x50" class="ad-box">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '40269b891c4eff0c4cd065c8b7cdf14c',
+            'format' : 'iframe',
+            'height' : 50,
+            'width' : 320,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//frozenbiopsyskate.com/40269b891c4eff0c4cd065c8b7cdf14c/invoke.js"></script>
+</div>
+
+<!-- ---------- AD: 468x60 (Tablets) ---------- -->
+<div id="ad-468x60" class="ad-box">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '21fabc23044611afd729b084dab736d0',
+            'format' : 'iframe',
+            'height' : 60,
+            'width' : 468,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//frozenbiopsyskate.com/21fabc23044611afd729b084dab736d0/invoke.js"></script>
+</div>
+
+<!-- ---------- AD: 728x90 (Desktop) ---------- -->
+<div id="ad-728x90" class="ad-box">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'dde03310215f89a1db604e88cfbc942b',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//frozenbiopsyskate.com/dde03310215f89a1db604e88cfbc942b/invoke.js"></script>
+</div>
+  </div>
 </div>
 
 <div class="ageModal" id="ageModal">
