--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="MWtether Society – Forex and news, Scandals & Education">
   <meta property="og:description" content="Latest global economic news, celebrity scandals, real stories and education updates.">
-  <meta property="og:image" content="https://mwtether.online/og-image.jpg">
+  <meta property="og:image" content="image.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="MWtether Society">
@@ -27,7 +27,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="MWtether Society – Global News, forex, Scandals & Education">
   <meta name="twitter:description" content="Latest global news, forex signals, celebrity scandals, real stories and education updates.">
-  <meta name="twitter:image" content="https://mwtether.online/og-image.jpg">
+  <meta name="twitter:image" content="image.png">
   <meta name="twitter:site" content="@mwtethersociety"> 
 
   <!-- Extra SEO & Browser -->
@@ -38,7 +38,7 @@
 
   <!-- Favicon-->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="image.png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
