--- a/info.html
+++ b/info.html
@@ -171,6 +171,67 @@
 
   <div class="header">
     <div class="back" onclick="history.back()">Back</div>
+    <!-- ---------- CSS FOR RESPONSIVE ADS ---------- -->
+<style>
+    .ad-box { display: none; text-align: center; margin: 10px 0; }
+
+    /* Small screens (phones) 320x50 */
+    @media (max-width: 480px) {
+        #ad-320x50 { display: block; }
+    }
+
+    /* Medium screens (tablets) 468x60 */
+    @media (min-width: 481px) and (max-width: 900px) {
+        #ad-468x60 { display: block; }
+    }
+
+    /* Large screens (desktop) 728x90 */
+    @media (min-width: 901px) {
+        #ad-728x90 { display: block; }
+    }
+</style>
+
+<!-- ---------- AD: 320x50 (Phones) ---------- -->
+<div id="ad-320x50" class="ad-box">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '40269b891c4eff0c4cd065c8b7cdf14c',
+            'format' : 'iframe',
+            'height' : 50,
+            'width' : 320,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//frozenbiopsyskate.com/40269b891c4eff0c4cd065c8b7cdf14c/invoke.js"></script>
+</div>
+
+<!-- ---------- AD: 468x60 (Tablets) ---------- -->
+<div id="ad-468x60" class="ad-box">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '21fabc23044611afd729b084dab736d0',
+            'format' : 'iframe',
+            'height' : 60,
+            'width' : 468,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//frozenbiopsyskate.com/21fabc23044611afd729b084dab736d0/invoke.js"></script>
+</div>
+
+<!-- ---------- AD: 728x90 (Desktop) ---------- -->
+<div id="ad-728x90" class="ad-box">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'dde03310215f89a1db604e88cfbc942b',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//frozenbiopsyskate.com/dde03310215f89a1db604e88cfbc942b/invoke.js"></script>
+</div>
     <h1 id="title">Loading article...</h1>
     <div class="meta">
       <div><span class="date" id="date"></span> <span id="author"></span></div>
