--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <header>
   <h1>MWtether Society</h1>
-  <p class="tagline"> News• Profitable Forex Analysis•Scandals• Eduroom</p>
+  <p class="tagline"> News• Forex•Scandals• Eduroom</p>
 </header>
 
 <nav class="topnav">
